--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,10 +19,10 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">{{ site.title | default: site.github.repository_name }}</h1>
+      <h1 class="title">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
     </header>
     <div id="container">
-      <p class="tagline">{{ site.description | default: site.github.project_tagline }}</p>
+      <p class="tagline">{{ page.description| default: site.description | default: site.github.project_tagline }}</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
@@ -30,7 +30,6 @@
           <a href="{{ site.github.tar_url }}" class="download-button tar"><span>Download</span></a>
           <a href="{{ site.github.zip_url }}" class="download-button zip"><span>Download</span></a>
           {% endif %}
-          <a href="{{ site.github.repository_url }}" class="code">View {{ site.title | default: site.github.repository_name }} on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
